{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7698ae4b-b94f-41a6-bbc7-88f935f1aade",
            "actions": [
                {
                    "name": "MainAction",
                    "type": "Button",
                    "id": "8c6a8fa1-a3b3-4c42-abb7-8b883d84818e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "AxialAction",
                    "type": "Value",
                    "id": "90d67628-3dcc-4136-9a6e-dcac605f881c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reticle",
                    "type": "Value",
                    "id": "899964c7-a04e-4063-80bd-effa1946adc3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SubAction",
                    "type": "Button",
                    "id": "8f7a0a2a-1828-4e92-afb1-d5fedbb5120c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MovementAxis",
                    "type": "Value",
                    "id": "133c69c5-d0d5-4623-9465-a39a3661a51d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll_Left",
                    "type": "Button",
                    "id": "d55bb238-5164-491c-8112-f9473c8d3259",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll_Right",
                    "type": "Button",
                    "id": "8ec9585b-df1e-4826-bf69-4f08a7c2e1a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db3e92aa-4be8-4c80-bc3b-7901510af5f7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MainAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d8e523f-b836-45e9-851e-b7700f9d61c5",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";GamePad",
                    "action": "MainAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "1b1473f4-5283-46a3-9bc4-57319767495b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxialAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9e37cb43-eaed-4a86-857e-cf3bf17fb961",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "AxialAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0927fe5f-a6e6-4e6c-84ee-93f5de78a83c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "AxialAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "7c39a710-4b30-401e-a492-cb34d1498f49",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxialAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8bc513de-25a4-462d-9ffa-d4a61d82346b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";GamePad",
                    "action": "AxialAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a5c3cf5a-3802-4047-aab4-e748366c71b7",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";GamePad",
                    "action": "AxialAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1cb48ee7-7832-4127-afa6-48c7a0bb4cb9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";GamePad",
                    "action": "Reticle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "067897c6-0bb4-485d-bf56-95ae86cfd631",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Reticle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd4dc1df-3007-4ea3-9d0f-b48f15e916ce",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";GamePad",
                    "action": "SubAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b47c8732-9b14-41f2-ac4a-f28d1aea167a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "SubAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bae9eee-7c8c-4f01-a113-081975732d69",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";GamePad",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fcacfb2e-1e57-4a83-82ff-d07bba7f3afb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8568c02b-f7ec-4791-9296-1850220ddb5a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0abe5c3c-3210-4fc4-a152-8af1ae376ca0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "86efcf2f-34ec-48b9-b24c-2feb323e14f8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f081822b-79ec-496a-82d5-5858f7187edc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a3784d79-6f15-4521-b686-08220c3ba5ec",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Roll_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47182659-c0ce-4466-8612-e897a1db4f42",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";GamePad",
                    "action": "Roll_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "932b839b-b173-4ab4-954f-321ad1ea976e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Roll_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "228a7a6f-4405-4f13-80f9-f1f7427d6ac8",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";GamePad",
                    "action": "Roll_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}